Fix logo scaling - Navbar now narrower on mobile devices (7rem->5rem, roughly based on PSD measurement of 84px/5.25rem)

--- a/style.css
+++ b/style.css
@@ -191,6 +191,11 @@ footer {
     gap: 1rem;
 }
 
+.navbar-logo {
+    height: 100%;
+    width: auto;
+}
+
 .navbar-link {
     padding: 0.5rem;
 }
@@ -463,6 +468,8 @@ footer {
 
         /* In case of wrapping */
         --el-height-header: 2rem;
+
+        --el-height-navbar: 5rem;
     }
 
     .hero-container {
